--- a/Makefile.in
+++ b/Makefile.in
@@ -427,25 +427,25 @@ uninstall-ncat:
 uninstall-nping:
 	@cd $(NPINGDIR) && $(MAKE) uninstall
 
-nse_check:
+check-nse:
 	./nmap -d --datadir . --script=unittest --script-args=unittest.run
 
-ncat_check:
+check-ncat:
 	@cd $(NCATDIR) && $(MAKE) check
 
-ndiff_check:
+check-ndiff:
 	@cd $(NDIFFDIR) && $(PYTHON) ndifftest.py
 
-nsock_check:
+check-nsock:
 	@cd $(NSOCKDIR)/src && $(MAKE) check
 
-zenmap_check:
+check-zenmap:
 	@cd $(ZENMAPDIR)/test && $(PYTHON) run_tests.py
 
-dns_check: tests/check_dns
+check-dns: tests/check_dns
 	$<
 
-check: @NCAT_CHECK@ @NSOCK_CHECK@ @ZENMAP_CHECK@ @NSE_CHECK@ @NDIFF_CHECK@ dns_check
+check: @NCAT_CHECK@ @NSOCK_CHECK@ @ZENMAP_CHECK@ @NSE_CHECK@ @NDIFF_CHECK@ check-dns
 
 ${srcdir}/configure: configure.ac 
 	cd ${srcdir} && autoconf
