Add a missing dependency in Makefile.in
git-svn-id: https://svn.nmap.org/nmap@35168 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -115,7 +115,7 @@ FPModel.o: CXXFLAGS += -g0
 
 all: $(TARGET) $(BUILDZENMAP) $(BUILDNDIFF) $(BUILDNPING) @NMAP_UPDATE_BUILD@
 
-$(TARGET): build-netutil @NSOCK_BUILD@ @NBASE_BUILD@ @DNET_BUILD@ @LUA_BUILD@ \
+$(TARGET): build-netutil @LIBLINEAR_BUILD@ @NSOCK_BUILD@ @NBASE_BUILD@ @DNET_BUILD@ @LUA_BUILD@ \
 	@LUA_DEPENDS@ @LIBLINEAR_DEPENDS@ @PCAP_DEPENDS@ @PCRE_DEPENDS@ \
 	@DNET_DEPENDS@ $(NBASEDIR)/libnbase.a $(NSOCKDIR)/src/libnsock.a \
 	libnetutil/libnetutil.a $(OBJS) main.o
