Add a make-install step to Travis CI. Closes #205
git-svn-id: https://svn.nmap.org/nmap@35217 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - clang
 # Change this to your needs
 sudo: false
-script: ./configure && make && make check
+script: mkdir /tmp/n && ./configure --prefix=/tmp/n && make && make check && make install
 
 notifications:
   irc:
