Remove another generated file (from make check) in distclean.
git-svn-id: https://svn.nmap.org/nmap@35304 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -275,7 +275,7 @@ distclean-zenmap: clean-zenmap
 	-cd $(ZENMAPDIR) && rm -rf MANIFEST build/ dist/ INSTALLED_FILES
 
 distclean-ndiff: clean-ndiff
-	-cd $(NDIFFDIR) && rm -rf build/ dist/ INSTALLED_FILES
+	-cd $(NDIFFDIR) && rm -rf ndiff.pyc build/ dist/ INSTALLED_FILES
 
 distclean-nping:
 	-cd $(NPINGDIR) && $(MAKE) distclean
