Fix a typo autoconf variable name
git-svn-id: https://svn.nmap.org/nmap@35307 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -80,7 +80,7 @@ INSTALLNSE=@INSTALLNSE@
 BUILDZENMAP=@BUILDZENMAP@
 BUILDNDIFF=@BUILDNDIFF@
 BUILDNPING=@BUILDNPING@
-BUILDNCAT=@BUILDNCAT@
+BUILDNCAT=@NCAT_BUILD@
 INSTALLZENMAP=@INSTALLZENMAP@
 INSTALLNDIFF=@INSTALLNDIFF@
 INSTALLNPING=@INSTALLNPING@
