Clean up some windows build errors due to misapplication of a patch
git-svn-id: https://svn.nmap.org/nmap@35427 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/liblinear/liblinear.vcxproj
+++ b/liblinear/liblinear.vcxproj
@@ -96,4 +96,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>Index: liblua/liblua.vcxproj
+</Project>
