--- a/liblua/liblua.vcxproj
+++ b/liblua/liblua.vcxproj
@@ -157,4 +157,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>Index: libnetutil/libnetutil.vcxproj
+</Project>
