--- a/ncat/ncat.vcxproj
+++ b/ncat/ncat.vcxproj
@@ -260,4 +260,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>Index: nmap-update/nmap-update.vcxproj
+</Project>
